# tweeter

./: .gitignore  README.md  pyproject.toml
scripts/: update.sh
src/birdmesh/: __init__.py  app.py  bird_emojis.py  birdnet.py  cli.py  commands.py  config.py  formatting.py  meshtastic_client.py  models.py  state.py  timeutil.py
systemd/: birdmesh.service
tests/: test_app.py  test_bird_emojis.py  test_birdnet.py  test_commands.py  test_formatting.py
